<resources>
    <string name="app_name">QuickBible</string>
    <string name="verse">Verse</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="random">random</string>
    <string name="day">day</string>
    <string name="previousBook">Genesis</string>
    <string name="currentBook">Exodus</string>
    <string name="nextBook">Leviticus</string>
    <string name="previousChapter">1</string>
    <string name="currentChapter">2</string>
    <string name="nextChapter">3</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="versions">Versions</string>
    <string name="history">View History</string>
    <string name="highlights">View Highlights</string>
    <string name="references">Cross References</string>
    <string name="audio">Play Audio</string>
    <string name="highlight">Highlight Selection</string>
    <string name="copy">Copy</string>
    <string name="Night">Night</string>
    <string name="Day">Day</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="update">Update</string>
    <string name="reset_password">Reset Password</string>
    <string name="bible">Bible</string>
</resources>
